config/kubernetes/fppss-energy/base/fppss-energy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fppss-db
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    matchLabels:
      component: fppss-db
  template:
    metadata:
      labels:
        component: fppss-db
        app.kubernetes.io/part-of: fppss-energy
        app.kubernetes.io/name: fppss-db
        app.kubernetes.io/version: "10.6"
    spec:
      volumes:
        - name: fppss-db
          persistentVolumeClaim:
            claimName: fppss-db
      containers:
        - name: fppss-db
          image: mariadb:10.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: fppss-db
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fppss-db
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    component: fppss-db
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fppss-rest-api
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    matchLabels:
      component: fppss-rest-api
  template:
    metadata:
      labels:
        component: fppss-rest-api
        app.kubernetes.io/part-of: fppss-energy
        app.kubernetes.io/name: fppss-rest-api
        app.kubernetes.io/version: "latest"
    spec:
      volumes:
      - name: sql-files
        emptyDir: {}
      containers:
      - name: fppss-rest-api
        image: ghcr.io/2110781006/fppss-rest-api:0.1.0 # {"$imagepolicy": "flux-system:fppss-rest-api"}
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
        resources: {}
        # readinessProbe:
        #   httpGet:
        #     path: /api/v1/healthcheck
        #     port: web
        #   periodSeconds: 2
        # livenessProbe:
        #   httpGet:
        #     path: /api/v1/healthcheck
        #     port: web
        #   periodSeconds: 10
        #   failureThreshold: 1
        # startupProbe:
        #   httpGet:
        #     path: /api/v1/healthcheck
        #     port: web
        #   failureThreshold: 30
        #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fppss-rest-api
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    component: fppss-rest-api
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fppss-datacollector
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    matchLabels:
      component: fppss-datacollector
  template:
    metadata:
      labels:
        component: fppss-datacollector
        app.kubernetes.io/part-of: fppss-energy
        app.kubernetes.io/name: fppss-datacollector
        app.kubernetes.io/version: "latest"
    spec:
      containers:
      - name: fppss-datacollector
        image: ghcr.io/2110781006/fppss-datacollector:0.1.0 # {"$imagepolicy": "flux-system:fppss-datacollector"}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
          requests:
            memory: "64Mi"
            cpu: "40m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fppss-frontend
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    matchLabels:
      component: fppss-frontend
  template:
    metadata:
      labels:
        component: fppss-frontend
        app.kubernetes.io/part-of: fppss-energy
        app.kubernetes.io/name: fppss-frontend
        app.kubernetes.io/version: "latest"
    spec:
      containers:
      - name: fppss-frontend
        image: ghcr.io/2110781006/fppss-frontend:0.1.0 # {"$imagepolicy": "flux-system:fppss-frontend"}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fppss-frontend
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    component: fppss-frontend
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fppss-sso
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    matchLabels:
      component: fppss-sso
  template:
    metadata:
      labels:
        component: fppss-sso
        app.kubernetes.io/part-of: fppss-energy
        app.kubernetes.io/name: fppss-sso
        app.kubernetes.io/version: "latest"
    spec:
      containers:
      - name: fppss-sso
        image: docker.io/jboss/keycloak:16.1.1
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: realm-config
          mountPath: "/tmp/fppss-realm.json"
          subPath: "fppss-realm.json"
          readOnly: true
        - mountPath: "/opt/jboss/keycloak/standalone/data"
          name: fppss-sso
      volumes:
      - name: fppss-sso
        persistentVolumeClaim:
          claimName: fppss-sso
      - name: realm-config
        configMap:
          name: fppss-demo
          items:
          - key: fppss-realm.json
            path: fppss-realm.json
---
apiVersion: v1
kind: Service
metadata:
  name: fppss-sso
  namespace: fppss-energy
  labels:
    app: fppss-energy
spec:
  selector:
    component: fppss-sso
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fppss-demo
  namespace: fppss-energy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-http-redirect@kubernetescrd,default-cors-allow-origin@kubernetescrd
spec:
  rules:
  - host: fppss-demo.thomasst.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fppss-frontend
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: fppss-rest-api
            port:
              number: 80
  tls:
  - hosts:
    - fppss-demo.thomasst.xyz
    secretName: fppss-demo-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fppss-demo-sso
  namespace: fppss-energy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-http-redirect@kubernetescrd,default-cors-allow-origin@kubernetescrd
spec:
  rules:
  - host: fppss-demo-sso.thomasst.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fppss-sso
            port:
              number: 80
  tls:
  - hosts:
    - fppss-demo-sso.thomasst.xyz
    secretName: fppss-demo-sso-tls
